--- a/style.css
+++ b/style.css
@@ -14,7 +14,14 @@
   font-family: 'Segoe WP';
   font-style: normal;
   font-weight: normal;
-  src: local('Segoe WP'), url('assets/SegoeWP.woff') format('woff');
+  src: local('Segoe WP'), url('assets/SegoeWP.woff') format('truetype');
+}
+
+@font-face {
+  font-family: 'SegoeWP';
+  font-style: normal;
+  font-weight: normal;
+  src: url('assets/segoe-wp-light.woff') format('truetype');
 }
 
 @font-face {
@@ -34,8 +41,10 @@
   font-style: normal;
 }
 
-.container {
-  background: url(/assets/header_fon.jpg);
+@import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
+
+.header-container {
+  background-image: linear-gradient(to top, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("/assets/header_fon.jpg");
   background-size: 100%;
   height: 566px;
   width: 1300px;
@@ -68,6 +77,16 @@
   font-weight: normal;
   text-shadow: #000000 0px 1px 0px;
   padding: 11px 0px 0px 5px;
+}
+
+.heading-2 {
+  font-size: 37px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-family: "PT Sans";
+  font-weight: 400;
+  padding: 31px 0;
 }
 
 .logo {
@@ -175,8 +194,6 @@
   fill: #ffffff;
 }
 
-
-
 .wrapper {
   display: flex;
 }
@@ -217,6 +234,7 @@
   height: 212px;
   background: url('assets/fon2.png');
   margin: 0 auto;
+  box-shadow:
 }
 
 .features-wrapper {
@@ -230,7 +248,7 @@
 .features-item {
   display: inline-block;
   text-align: center;
-  
+
   border-left: 1px solid #d3d3d3;
   width: 340px;
   height: 212px;
@@ -259,6 +277,7 @@
   line-height: 37px;
   letter-spacing: 0.3px;
 }
+
 .features-item:nth-child(2) {
   padding: 37px 0px 0px 22px;
   line-height: 42px;
@@ -267,8 +286,65 @@
 }
 
 .features-item:last-child {
- padding: 54px 20px 0px 0px;
- line-height: 37px;
- letter-spacing: 0.3px;
+  padding: 54px 20px 0px 0px;
+  line-height: 37px;
+  letter-spacing: 0.3px;
   border-right: 1px solid #d3d3d3;
+}
+
+.news-container {
+  background-image: linear-gradient(to bottom, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("/assets/fon3.png");
+  background-size: 100%;
+  height: 505px;
+  width: 1300px;
+  margin: 0 auto;
+}
+
+.news {
+  width: 1020px;
+  margin: 0 auto;
+}
+
+.news-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1020px;
+  margin: 0 auto;
+}
+
+.news-item {
+  display: flex;
+  width: 665px;
+  height: 232px;
+  flex-wrap: wrap;
+}
+
+.news-content {
+width: 341px;
+    background: #ec9e03;
+    font-family: 'Segoe UI Light', sans-serif;
+    font-size: 29px;
+    color: #ffffff;
+    font-weight: normal;
+    padding: 16px 0px 0px 29px;
+    letter-spacing: 0.3px;
+    line-height: 38px;
+}
+
+.media-news {
+  width: 318px;
+  height: 232px;
+}
+
+.news-item-twitter {
+  display: block;
+  text-align: center;
+  padding-top: 57px;
+  padding-right: 5px;
+  height: 232px;
+  background: #ec9e03;
+  width: 329px;
+  margin-right: 2px;
+
 }
