--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@
 }
 
 @font-face {
-  font-family: 'SegoeWP';
-  font-style: normal;
-  font-weight: normal;
+  font-family: 'Segoe WP light';
   src: url('assets/segoe-wp-light.woff') format('truetype');
 }
 
@@ -37,6 +35,26 @@
   src: url('SegoeUI-Light.eot?#iefix') format('embedded-opentype'),
     url('SegoeUI-Light.woff') format('woff'),
     url('SegoeUI-Light.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Segoe UI Regular';
+  src: url('SegoeUI.eot');
+  src: url('SegoeUI.eot?#iefix') format('embedded-opentype'),
+    url('SegoeUI.woff') format('woff'),
+    url('SegoeUI.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Segoe UI Bold';
+  src: url('SegoeUI-Bold.eot');
+  src: url('SegoeUI-Bold.eot?#iefix') format('embedded-opentype'),
+    url('SegoeUI-Bold.woff') format('woff'),
+    url('SegoeUI-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -86,7 +104,7 @@
   color: #ffffff;
   font-family: "PT Sans";
   font-weight: 400;
-  padding: 31px 0;
+  padding: 31px 1px;
 }
 
 .logo {
@@ -241,7 +259,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 1020px;
+  width: 1021px;
   margin: 0 auto;
 }
 
@@ -256,6 +274,18 @@
   font-size: 27px;
   letter-spacing: 0px;
   text-transform: uppercase;
+}
+
+.features-item:first-child {
+  width: 341px;
+}
+
+.features-item:nth-child(2) {
+  width: 340px;
+}
+
+.features-item:last-child {
+  width: 341px;
 }
 
 .features-item:first-child p {
@@ -273,13 +303,13 @@
 
 
 .features-item:first-child {
-  padding: 61px 6px 0px 0px;
+  padding: 61px 5px 0px 0px;
   line-height: 37px;
   letter-spacing: 0.3px;
 }
 
 .features-item:nth-child(2) {
-  padding: 37px 0px 0px 22px;
+  padding: 37px 0px 0px 23px;
   line-height: 42px;
   letter-spacing: 0.3px;
 
@@ -301,35 +331,38 @@
 }
 
 .news {
-  width: 1020px;
+  width: 1022px;
   margin: 0 auto;
 }
 
 .news-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  width: 1020px;
+  align-items: flex-start;
+  width: 1022px;
   margin: 0 auto;
+  height: auto;
 }
 
 .news-item {
   display: flex;
   width: 665px;
-  height: 232px;
   flex-wrap: wrap;
+  height: auto;
 }
 
 .news-content {
-width: 341px;
-    background: #ec9e03;
-    font-family: 'Segoe UI Light', sans-serif;
-    font-size: 29px;
-    color: #ffffff;
-    font-weight: normal;
-    padding: 16px 0px 0px 29px;
-    letter-spacing: 0.3px;
-    line-height: 38px;
+  position: relative;
+  width: 341px;
+  background: #ec9e03;
+  font-family: 'Segoe UI Light', sans-serif;
+  font-size: 29px;
+  color: #ffffff;
+  font-weight: normal;
+  padding: 16px 0px 0px 30px;
+  letter-spacing: 0.3px;
+  line-height: 38px;
+  height: 233px;
 }
 
 .media-news {
@@ -337,14 +370,177 @@ width: 341px;
   height: 232px;
 }
 
-.news-item-twitter {
-  display: block;
-  text-align: center;
-  padding-top: 57px;
-  padding-right: 5px;
-  height: 232px;
-  background: #ec9e03;
-  width: 329px;
-  margin-right: 2px;
 
+
+.date {
+ width: 113px;
+    height: 86px;
+    background: #ddb101;
+    font-family: 'Segoe UI Regular', sans-serif;
+    color: #b26529;
+    font-size: 20.8px;
+    text-align: left;
+    text-transform: uppercase;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    padding: 22px 29px;
+}
+
+.date_day {
+  font-size: 50px;
+    color: #ffffff;
+    font-family: 'Segoe UI Bold', sans-serif;
+    font-weight: bold;
+    padding: 0px 1px;
+}
+
+.date_month {
+    padding: 9px 3px;
+}
+
+.plus-1 {
+  position: absolute;
+  fill: #ffffff;
+  opacity: 0.7;
+  bottom: 13px;
+  right: 14px;
+}
+
+.video-news {
+  height: 232px;
+}
+
+
+.news-item-twitter {
+  background: #ec9e03;
+  margin-right: 3px;
+  position: relative;
+  width: 329px;
+  height: 233px;
+  background-image: url(assets/twitter.png);
+  background-repeat: no-repeat;
+  background-position: 76px 58px;
+}
+
+
+.twitter {}
+
+.date-second {
+  text-align: right;
+  padding: 15px 18px;
+  color: #ffffff;
+  font-family: 'Segoe WP Light', sans-serif;
+  font-size: 24.5px;
+}
+
+.plus-2 {
+  position: absolute;
+  fill: #ffffff;
+  opacity: 0.7;
+  bottom: 13px;
+  right: 10px;
+}
+
+
+/* Styling input type range */
+
+.range {
+  padding: 43px 74px;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 895px;
+  height: 16px;
+  margin: 0px 0;
+  border-radius: 50%;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+ height: 16px;
+  cursor: pointer;
+  background: #ffffff;
+  border-radius: 25px;
+  border: 0;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  border: 0;
+  height: 16px;
+  width: 195px;
+  border-radius: 50px;
+  background: #ec9e03;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: 0px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #ffffff;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 16px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px rgba(0, 34, 0, 0.18), 0px 0px 0px rgba(0, 60, 0, 0.18);
+  background: #ffffff;
+  border-radius: 25px;
+  border: 0;
+}
+
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #00aa00, 0px 0px 0px #00c300;
+  border: 0;
+ height: 16px;
+  width: 195pxpx;
+  border-radius: 50px;
+  background: #ec9e03;
+  cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 16px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+  background: #b3b3b3;
+  border: 0px solid #18d501;
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px rgba(0, 34, 0, 0.18), 0px 0px 0px rgba(0, 60, 0, 0.18);
+}
+
+input[type=range]::-ms-fill-upper {
+  background: #ffffff;
+  border: 0px solid #18d501;
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px rgba(0, 34, 0, 0.18), 0px 0px 0px rgba(0, 60, 0, 0.18);
+}
+
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 0px #00aa00, 0px 0px 0px #00c300;
+  border: 0px solid #f9ffb5;
+  width: 195px;
+  border-radius: 50px;
+  background: #ffe131;
+  cursor: pointer;
+  height: 11px;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+  background: #ffffff;
+}
+
+input[type=range]:focus::-ms-fill-upper {
+  background: #ffffff;
 }
