--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@
 }
 
 @import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 .header-container {
   background-image: linear-gradient(to top, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("/assets/header_fon.jpg");
@@ -102,9 +103,23 @@
   letter-spacing: 0.4px;
   text-transform: uppercase;
   color: #ffffff;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-weight: 400;
   padding: 31px 1px;
+}
+
+.heading-3 {
+  grid-area: a;
+  font-size: 43.5px;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  color: #f5c506;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  text-align: center;
+  padding: 35px 0px 0px 4px;
+  width: 1021px;
+  height: 35px;
 }
 
 .logo {
@@ -325,7 +340,7 @@
 .news-container {
   background-image: linear-gradient(to bottom, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("/assets/fon3.png");
   background-size: 100%;
-  height: 505px;
+  height: 508px;
   width: 1300px;
   margin: 0 auto;
 }
@@ -373,29 +388,29 @@
 
 
 .date {
- width: 113px;
-    height: 86px;
-    background: #ddb101;
-    font-family: 'Segoe UI Regular', sans-serif;
-    color: #b26529;
-    font-size: 20.8px;
-    text-align: left;
-    text-transform: uppercase;
-    line-height: 25px;
-    letter-spacing: 0.5px;
-    padding: 22px 29px;
+  width: 113px;
+  height: 86px;
+  background: #ddb101;
+  font-family: 'Segoe UI Regular', sans-serif;
+  color: #b26529;
+  font-size: 20.8px;
+  text-align: left;
+  text-transform: uppercase;
+  line-height: 25px;
+  letter-spacing: 0.5px;
+  padding: 22px 29px;
 }
 
 .date_day {
   font-size: 50px;
-    color: #ffffff;
-    font-family: 'Segoe UI Bold', sans-serif;
-    font-weight: bold;
-    padding: 0px 1px;
+  color: #ffffff;
+  font-family: 'Segoe UI Bold', sans-serif;
+  font-weight: bold;
+  padding: 0px 1px;
 }
 
 .date_month {
-    padding: 9px 3px;
+  padding: 9px 3px;
 }
 
 .plus-1 {
@@ -451,9 +466,10 @@
 input[type=range] {
   -webkit-appearance: none;
   width: 895px;
-  height: 16px;
+  height: 15px;
   margin: 0px 0;
-  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 25px;
 }
 
 input[type=range]:focus {
@@ -462,16 +478,16 @@ input[type=range]:focus {
 
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
- height: 16px;
+  height: 15px;
   cursor: pointer;
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.3);
   border-radius: 25px;
   border: 0;
 }
 
 input[type=range]::-webkit-slider-thumb {
   border: 0;
-  height: 16px;
+  height: 15px;
   width: 195px;
   border-radius: 50px;
   background: #ec9e03;
@@ -481,23 +497,21 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.3);
 }
 
 input[type=range]::-moz-range-track {
   width: 100%;
-  height: 16px;
+  height: 15px;
   cursor: pointer;
-  box-shadow: 0px 0px 0px rgba(0, 34, 0, 0.18), 0px 0px 0px rgba(0, 60, 0, 0.18);
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.3);
   border-radius: 25px;
   border: 0;
 }
 
 input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #00aa00, 0px 0px 0px #00c300;
   border: 0;
- height: 16px;
+  height: 15px;
   width: 195pxpx;
   border-radius: 50px;
   background: #ec9e03;
@@ -506,7 +520,7 @@ input[type=range]::-moz-range-thumb {
 
 input[type=range]::-ms-track {
   width: 100%;
-  height: 16px;
+  height: 15px;
   cursor: pointer;
   background: transparent;
   border-color: transparent;
@@ -515,21 +529,18 @@ input[type=range]::-ms-track {
 
 input[type=range]::-ms-fill-lower {
   background: #b3b3b3;
-  border: 0px solid #18d501;
+  border: 0;
   border-radius: 50px;
-  box-shadow: 0px 0px 0px rgba(0, 34, 0, 0.18), 0px 0px 0px rgba(0, 60, 0, 0.18);
 }
 
 input[type=range]::-ms-fill-upper {
-  background: #ffffff;
-  border: 0px solid #18d501;
+  background: rgba(255, 255, 255, 0.3);
+  border: 0;
   border-radius: 50px;
-  box-shadow: 0px 0px 0px rgba(0, 34, 0, 0.18), 0px 0px 0px rgba(0, 60, 0, 0.18);
 }
 
 input[type=range]::-ms-thumb {
-  box-shadow: 0px 0px 0px #00aa00, 0px 0px 0px #00c300;
-  border: 0px solid #f9ffb5;
+  border: 0;
   width: 195px;
   border-radius: 50px;
   background: #ffe131;
@@ -538,9 +549,165 @@ input[type=range]::-ms-thumb {
 }
 
 input[type=range]:focus::-ms-fill-lower {
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.3);
 }
 
 input[type=range]:focus::-ms-fill-upper {
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+/* Section benefit_container */
+
+.benefit-wrapper {
+  width: 1300px;
+  margin: 0 auto;
+  background: #4c4c4c;
+  background-image: linear-gradient(to top, rgb(0, 0, 0, 0.7) 0%, transparent 1.5%), url("/assets/fon4.png");
+  height: 497px;
+}
+
+.benefit_container {
+  display: grid;
+  margin: 0 auto;
+  justify-content: center;
+  justify-items: center;
+  width: 1035px;
+  grid-template-areas: "a a"
+    "b c";
+    height: 497px;
+}
+
+.pic {
+  grid-area: b;
+  width: 598px;
+  height: 349px;
+  background-image: url(assets/itsfree.png);
+  background-repeat: no-repeat;
+  background-position: 3px 0px;
+}
+
+.benefit {
+  grid-area: c;
+  width: 435px;
+  padding: 96px 0px 0px 47px;
+}
+
+
+.benefit-items li {
+  display: flex;
+  list-style: none;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 22px;
+  width: auto;
+  color: #a9a9a7;
+}
+
+.benefit-items li::before {
+  content: "";
+  color: #f5c506;
+  font-weight: bold;
+  display: block;
+  width: 14px;
+  height: 14px;
+  background-color: #f5c506;
+  border-radius: 50% 50% 50% 50%;
+}
+
+.benefit-items li:first-child::before {
+  margin-right: 19px;
+}
+
+.benefit-items li:first-child p {
+  line-height: 10px;
+  letter-spacing: 0.65px;
+  font-size: 21px;
+  height: 50px;
+  padding: 2px 0px;
+}
+
+
+.benefit-items li:nth-child(2)::before {
+  margin-right: 19px;
+}
+
+.benefit-items li:nth-child(2) p {
+  margin-top: -10px;
+  line-height: 26.5px;
+  letter-spacing: 0.7px;
+  font-size: 21px;
+  height: 76px;
+  padding: 2px 0px;
+}
+
+.benefit-items li:nth-child(3)::before {
+  margin-right: 19px;
+}
+
+.benefit-items li:nth-child(3) p {
+  margin-top: -10px;
+  line-height: 27px;
+  letter-spacing: 0.7px;
+  font-size: 21px;
+  height: 61px;
+  padding: 2px 0px;
+}
+
+.benefit-items li:last-child::before {
+  margin-right: 19px;
+}
+
+.benefit-items li:last-child p {
+  margin-top: -10px;
+  line-height: 26.5px;
+  letter-spacing: 0.7px;
+  font-size: 21px;
+  height: 50px;
+  padding: 2px 0px;
+}
+
+.word-omnis {
+  letter-spacing: -0.8px;
+}
+
+/* Footer */
+
+.footer {
+  margin: 0 auto;
+  background: #4c4c4c;
+  width: 1300px;
+  height: 64px;
+}
+
+.logo-footer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 1030px;
+  margin: 0 auto;
+  padding: 1px 0px 0px 4px;
+}
+
+.hedding-footer {
+  display: block;
+  font-size: 29.35px;
+  text-transform: uppercase;
+  font-style: italic;
+  color: #ffffff;
+  font-family: 'Lucida Sans Italic', sans-serif;
+  font-weight: normal;
+  text-shadow: #000000 0px 1px 0px;
+  padding: 3px 0px 0px 5px;
+
+}
+
+.footer_container {
+  width: 1030px;
+  margin: 0 auto;
+}
+
+.logotype-footer {
+      margin: 4px 0px 2px 0px;
+    padding: 0px;
+    width: 55px;
+    height: 56px;
 }
