--- a/style.css
+++ b/style.css
@@ -1071,7 +1071,7 @@ input[type=range]:focus::-ms-fill-upper {
     height: 232px;
   }
 
-  /* Twitter section */
+  /* Twitter section 640px */
 
   .news-item-twitter {
     display: flex;
@@ -1100,6 +1100,10 @@ input[type=range]:focus::-ms-fill-upper {
 
   .twitter-chat {
     display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13.05px;
+    color: #8f8e8e;
+    letter-spacing: 0.1px;
     width: 329px;
     height: 233px;
   }
@@ -1114,18 +1118,60 @@ input[type=range]:focus::-ms-fill-upper {
 
   .twit-old {
     width: 284px;
-    height: 56px;
+    height: 55px;
     background: url(assets/tweet-old.png);
     background-repeat: no-repeat;
     background-position: 0px 0px;
   }
 
   .tweet-message-new {
-    padding: 27px 0px 0px 17px;
+    padding: 31px 0px 0px 28px;
   }
 
   .tweet-message {
-    padding: 4px 0px 0px 17px;
+    padding: 7px 0px 0px 28px;
+  }
+
+  form {
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+  }
+
+  input[type="tweet"] {
+    outline: none;
+    border: 1px solid #d0a806;
+    padding: 5px 3px 5px 30px;
+    margin: 1px 12px;
+    display: block;
+    width: 272px;
+    height: 31px;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: inset 1px 1px 3px 0px rgba(0, 0, 0, 0.27);
+  }
+
+  button[type="submit"] {
+    position: absolute;
+    top: 2px;
+    right: 13px;
+    z-index: 9;
+    outline: none;
+    border: none;
+    display: inline-block;
+    background: #d08f0c;
+    background: linear-gradient(to bottom, #eaa927 0%, #d08f0c 100%);
+    color: #fff;
+    padding: 0px 3px 0px 0px;
+    width: 69px;
+    height: 30px;
+    font-size: 15px;
+    border-radius: 0px 10px 10px 0px;
+    cursor: pointer;
+  }
+
+  button[type="submit"]:hover {
+    background: #f00;
   }
 
   /* Range */
@@ -1176,10 +1222,10 @@ input[type=range]:focus::-ms-fill-upper {
   .pic {
     grid-area: b;
     width: 592px;
-    height: 271px;
+    height: 322px;
     background-image: url(assets/itsfree-640.png);
     background-repeat: no-repeat;
-    background-position: 3px 0px;
+    background-position: 3px 25px;
   }
 
   /* Footer */
@@ -1201,9 +1247,9 @@ input[type=range]:focus::-ms-fill-upper {
   }
 
   .hedding-footer {
-   font-size: 16.5px;
-   letter-spacing: 0px;
-   padding: 5px 0px 0px 5px;
+    font-size: 16.5px;
+    letter-spacing: 0px;
+    padding: 5px 0px 0px 5px;
 
   }
 
@@ -1213,10 +1259,10 @@ input[type=range]:focus::-ms-fill-upper {
   }
 
   .logotype-footer {
-    margin: 4px 0px 2px 0px;
+    margin: 5px 2px 1px 0px;
     padding: 0px;
     width: 35px;
-    height: 35px;
+    height: 33px;
   }
 
 }
