--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@
 }
 
 .header-container {
-  background-image: linear-gradient(to top, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("/assets/header_fon.jpg");
+  background-image: linear-gradient(to top, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("assets/header_fon.jpg");
   background-size: 100%;
   height: 566px;
   width: 1300px;
@@ -339,7 +339,7 @@
 }
 
 .news-container {
-  background-image: linear-gradient(to bottom, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("/assets/fon3.png");
+  background-image: linear-gradient(to bottom, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("assets/fon3.png");
   background-size: 100%;
   height: 508px;
   width: 1300px;
@@ -590,7 +590,7 @@ input[type=range]:focus::-ms-fill-upper {
   width: 1300px;
   margin: 0 auto;
   background: #4c4c4c;
-  background-image: linear-gradient(to top, rgb(0, 0, 0, 0.7) 0%, transparent 1.5%), url("/assets/fon4.png");
+  background-image: linear-gradient(to top, rgb(0, 0, 0, 0.7) 0%, transparent 1.5%), url("assets/fon4.png");
   height: 497px;
 }
 
@@ -990,7 +990,7 @@ input[type=range]:focus::-ms-fill-upper {
   }
 
   .news-container {
-    background-image: linear-gradient(to bottom, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("/assets/fon3.png");
+    background-image: linear-gradient(to bottom, rgb(0, 0, 0, 0.3) 0%, transparent 1%), url("assets/fon3.png");
     background-size: 100%;
     height: auto;
     width: 640px;
@@ -1200,7 +1200,7 @@ input[type=range]:focus::-ms-fill-upper {
     width: 640px;
     margin: 0 auto;
     background: #4c4c4c;
-    background-image: linear-gradient(to top, rgb(0, 0, 0, 0.7) 0%, transparent 1.5%), url("/assets/fon4.png");
+    background-image: linear-gradient(to top, rgb(0, 0, 0, 0.7) 0%, transparent 1.5%), url("assets/fon4.png");
     height: 466px;
   }
 
